--- a/package.json
+++ b/package.json
@@ -9,15 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@portabletext/react": "^3.0.3",
+    "@sanity/client": "^6.1.3",
+    "@sanity/eslint-config-studio": "^2.0.1",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.12.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "next": "13.4.7",
+    "next-sanity": "^4.3.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-timeago": "^7.1.0",
+    "react-twitter-embed": "^4.0.4",
+    "sanity": "^3.12.2",
+    "styled-components": "^5.3.9",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@sanity/eslint-config-studio": "^2.0.1",
+    "@types/react-timeago": "^4.1.3"
   }
 }
